--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     {% if now %}
     <ul>
         {% for i in l %}
-        <li> {{i}}</li>
+        <li> {{i.title}}</li>
         {% endfor %}
     </ul>
     {% endif %}
